@@ -1,2 +1,2 @@
 NAME = 'django-strategy-field'
-VERSION = __version__ = "2.1.0"
+VERSION = __version__ = "2.2.0"
