@@ -149,8 +149,9 @@ def test_form_default(demo_multiple_model):
 @pytest.mark.django_db
 def test_admin_demo_multiple_model_add(webapp, admin_user):
     res = webapp.get('/demoapp/demomultiplemodel/add/', user=admin_user)
-    res.form['sender'] = ['demoproject.demoapp.models.Sender1']
-    res.form.submit().follow()
+    form = res.forms[1]
+    form['sender'] = ['demoproject.demoapp.models.Sender1']
+    form.submit().follow()
     assert DemoMultipleModel.objects.filter(sender='demoproject.demoapp.models.Sender1').count() == 1
 
 
@@ -158,8 +159,9 @@ def test_admin_demo_multiple_model_add(webapp, admin_user):
 def test_admin_demo_multiple_model_edit(webapp, admin_user, demo_multiple_model):
     url = reverse('admin:demoapp_demomultiplemodel_change', args=[demo_multiple_model.pk])
     res = webapp.get(url, user=admin_user)
-    res.form['sender'] = ['demoproject.demoapp.models.Sender2']
-    res.form.submit().follow()
+    form = res.forms[1]
+    form['sender'] = ['demoproject.demoapp.models.Sender2']
+    form.submit().follow()
     assert DemoMultipleModel.objects.filter(sender='demoproject.demoapp.models.Sender2').count() == 1
 
 
